--- a/src/dotnet/APIView/APIViewWeb/Pages/Shared/_Layout.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Shared/_Layout.cshtml
@@ -33,9 +33,6 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Assemblies/Index">Reviews</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Assemblies/Upload">Upload</a>
-                        </li>
-                        <li class="nav-item">
                             <a asp-action="Logout" asp-controller="Account" class="nav-link text-dark">Log Out</a>
                         </li>
                         }
@@ -52,7 +49,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - APIView - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2019 - APIView - <a href="https://github.com/Azure/azure-sdk-tools/">Feedback</a>
         </div>
     </footer>
 
