--- a/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
+++ b/src/dotnet/APIView/APIViewWeb/wwwroot/css/site.css
@@ -103,7 +103,7 @@ form.comment {
     margin-right: -5px;
 }
 
-.comment-box {
+.comment-row {
     border: 1px solid gray;
     border-spacing: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -124,16 +124,6 @@ form.comment {
     max-width: 592px;
     margin-bottom: 3px;
     overflow-wrap: break-word;
-}
-
-.comment-delete-button {
-    margin-left: 44px;
-}
-
-.comment-delete-text {
-    color: #B93D3D;
-    font-size: 12px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .comment-header {
@@ -213,23 +203,34 @@ form.comment {
     line-height: 20px;
 }
 
-.line-comment-button {
-    background-color: lightgray;
-    border-radius: 3px;
-    color: #FFF;
-    cursor: pointer;
-    float: left;
-    height: 20px;
-    line-height: 0px;
-    margin: -2px -10px -2px -24px;
-    position: center;
-    text-align: center;
-    text-indent: 0;
-    width: 20px;
-}
-
 .code-line:hover .line-comment-button {
     opacity: 1;
+}
+
+.line-comment-button:hover {
+    transform: scale(1);
+}
+
+.line-comment-button {
+    position: relative;
+    z-index: 5;
+    float: left;
+    width: 22px;
+    height: 22px;
+    margin: -2px -10px -2px -20px;
+    line-height: 21px;
+    color: #fff !important;
+    text-align: center;
+    text-indent: 0;
+    cursor: pointer;
+    background-color: #0366d6;
+    background-image: linear-gradient(#0372ef,#0366d6);
+    border-radius: 3px;
+    box-shadow: 0 1px 4px rgba(27,31,35,.15);
+    opacity: 0;
+    transition: transform .1s ease-in-out;
+    transform: scale(.8);
+    user-select: none;
 }
 
 .code {
@@ -378,7 +379,7 @@ code-inner {
     padding-left: 14px;
 }
 /* DIAGNOSTICS */
-.code-diagnostics {
+.code-diagnostics td {
     border: 1px solid red;
     background-color: lightpink;
 }
