Migrate to asp.net core 3.0 (#241)

--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Index.cshtml
@@ -2,7 +2,7 @@
 @model APIViewWeb.Pages.Assemblies.IndexPageModel
 @using APIViewWeb
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Reviews";
 }
 
 <div class="float-left mb-2">
