--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -85,8 +85,7 @@
 </div>
 <div id="comment-form-template">
     <div class="comment-form border-top new-thread-comment">
-        <form class="new-thread-comment-form comment" method="post" asp-route-id="@Model.Review.ReviewId" asp-route-revisionId="@Model.Revision.RevisionId">
-            <input type="hidden" name="elementId" class="elementIdInput" />
+        <form class="new-thread-comment-form comment" method="post" asp-controller="Comments" asp-action="Add" asp-route-reviewId="@Model.Review.ReviewId" asp-route-revisionId="@Model.Revision.RevisionId">
             <div class="new-comment-content">
                 <textarea class="new-thread-comment-text form-control" name="commentText" rows="3"></textarea>
             </div>
