--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/ReviewLayout.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/ReviewLayout.cshtml
@@ -1,12 +1,13 @@
 ﻿@{
     Layout = "Shared/_Layout";
+    var id = ViewContext.RouteData.Values["id"];
 }
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link @ActivePageClass("api")" asp-page="Review">API</a>
+        <a class="nav-link @ActivePageClass("api")" asp-page="Review" asp-route-id="@id">API</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link @ActivePageClass("revisions")" asp-page="Revisions">Revisions</a>
+        <a class="nav-link @ActivePageClass("revisions")" asp-page="Revisions" asp-route-id="@id">Revisions</a>
     </li>
 </ul>
 
