--- a/src/dotnet/APIView/APIViewWeb/Pages/Shared/_Layout.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Shared/_Layout.cshtml
@@ -49,7 +49,9 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - APIView - <a href="https://github.com/Azure/azure-sdk-tools/">Feedback</a>
+            &copy; 2019 - APIView
+            - <a href="https://github.com/Azure/azure-sdk-tools/">Feedback</a>
+            - <a href="https://github.com/Azure/azure-sdk-tools/commit/@Startup.VersionHash">@Startup.VersionHash</a>
         </div>
     </footer>
 
