--- a/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Assemblies/Review.cshtml
@@ -32,7 +32,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-2">
+    <div class="col-lg-2 col">
         <div class="namespace-view">
             @if (Model.CodeFile != null)
             {
