--- a/src/dotnet/APIView/APIViewWeb/Pages/Shared/_CommentThreadPartial.cshtml
+++ b/src/dotnet/APIView/APIViewWeb/Pages/Shared/_CommentThreadPartial.cshtml
@@ -17,11 +17,10 @@
                 <div class="comment-thread-contents">
                     @foreach (var comment in Model.Comments)
                     {
-                        <div class="review-comment">
-                            <div class="unminimized-comment">
-                                <div class="comment-actions">
-                                    @if (comment.Username == User.GetGitHubLogin())
-                                    {
+                        <div id="@comment.CommentId" class="review-comment">
+                            <div class="comment-actions">
+                                @if (comment.Username == User.GetGitHubLogin())
+                                {
                                     <div class="dropdown show">
                                         <a class="btn btn-sm" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             ...
@@ -34,17 +33,16 @@
                                             </form>
                                         </div>
                                     </div>
-                                    }
-                                </div>
-                                <div class="media">
-                                    <img username="@comment.Username" class="comment-icon align-self-start mr-3" height="28" width="28" />
-                                    <div class="media-body comment-contents">
-                                        <div>
-                                            <strong class=" mt-0 comment-header author align-top">@comment.Username</strong>
-                                            <span date="@comment.TimeStamp.ToLocalTime()" class="comment-timestamp align-top"></span>
-                                        </div>
-                                        @Html.FormatAsMarkdown(@comment.Comment)
+                                }
+                            </div>
+                            <div class="media">
+                                <img username="@comment.Username" class="comment-icon align-self-start mr-3" height="28" width="28" />
+                                <div class="media-body comment-contents">
+                                    <div>
+                                        <strong class=" mt-0 comment-header author align-top">@comment.Username</strong>
+                                        <a date="@comment.TimeStamp.ToLocalTime()" href="#@comment.CommentId" class="small float-right"></a>
                                     </div>
+                                    @Html.FormatAsMarkdown(@comment.Comment)
                                 </div>
                             </div>
                         </div>
